# sudoku-solver

./: CMakeLists.txt  README.md
include/: sudoku.hpp
src/: main.cc  sudoku.cc
sudoku_files/: sudoku_3.txt
